--- a/FlickrBrowser/app/src/main/res/values-v23/styles.xml
+++ b/FlickrBrowser/app/src/main/res/values-v23/styles.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <style name="AppTheme.NoActionBar">
@@ -5,6 +6,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:colorBackgroundFloating">@color/primary</item>
         <item name="android:navigationBarColor">@color/primary_dark</item>
     </style>
 </resources>
