--- a/YoutubePlayer/app/src/main/res/layout/activity_main.xml
+++ b/YoutubePlayer/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,21 @@
     android:layout_height="match_parent"
     tools:context="com.hoang.youtubeplayer.MainActivity">
 
-    <TextView
+
+    <Button
+        android:id="@+id/btnSingle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginStart="16dp"
+        android:text="Play single view video"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp" />
+        tools:layout_editor_absoluteY="37dp" />
+
+    <Button
+        android:id="@+id/btnStandalone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play sub menu"
+        app:layout_constraintLeft_toLeftOf="@+id/btnSingle"
+        app:layout_constraintTop_toBottomOf="@+id/btnSingle" />
 </android.support.constraint.ConstraintLayout>
